--- a/GuessingGameServer/App.config
+++ b/GuessingGameServer/App.config
@@ -7,5 +7,6 @@
 		<add key="GameFile2" value="game2.txt"/>
 		<add key="GameFile3" value="game3.txt"/>
 		<add key="GameFile4" value="game4.txt"/>
+		<add key="BufferSize" value="1024"/>
 	</appSettings>
 </configuration>
