--- a/GuessingGameClient/App.config
+++ b/GuessingGameClient/App.config
@@ -1,3 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<appSettings>
+		<add key="ServerIP" value="127.0.0.1"/>
+		<add key="ServerPort" value="5000"/>
+		<add key="BufferSize" value="1024"/>
+		<add key="GameFile1" value="game1.txt"/>
+		<add key="GameFile2" value="game2.txt"/>
+		<add key="GameFile3" value="game3.txt"/>
+		<add key="GameFile4" value="game4.txt"/>
+	</appSettings>
 </configuration>
