--- a/GuessingGameClient/GuessingGameClient.csproj
+++ b/GuessingGameClient/GuessingGameClient.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClientUI\ClientUI.csproj" />
+  </ItemGroup>
+
 </Project>
