--- a/GuessingGameClient/App.config
+++ b/GuessingGameClient/App.config
@@ -3,6 +3,8 @@
 	<appSettings>
 		<add key="ServerIP" value="127.0.0.1"/>
 		<add key="ServerPort" value="5000"/>
+		<add key="ClientIP" value="127.0.0.1"/>
+		<add key="ClientPort" value="5000"/>
 		<add key="BufferSize" value="1024"/>
 		<add key="GameFile1" value="game1.txt"/>
 		<add key="GameFile2" value="game2.txt"/>
